--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -15,6 +15,7 @@ $background-opacity: 0.9;
             background-attachment: fixed;
             background-size: cover;
 
+            // overlay
             &:after {
                 content: '';
                 position: absolute;
