--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,6 +2,7 @@ $primary-color: #444;
 $secondary-color: #EECE1A;
 $show-home-image: true;
 $home-image: url('../img/background.jpg');
+$portrait-image: url('../img/portrait.jpg');
 $background-opacity: 0.9;
 
 @mixin easeOut {
@@ -28,5 +29,30 @@ $background-opacity: 0.9;
             }
         }
 
+    }
+}
+
+// media query mixins
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mediaLg {
+    @media screen and (min-width: 768px) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+@mixin mediaXL {
+    @media screen and (min-width: 1171px) {
+        @content;
     }
 }
